Fix contact page button on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -795,7 +795,7 @@ Additional Styles
 */
 .submitBtn,
 .work-button,
-.submitBtn2  {
+.submitBtn2 {
 	background-color: rgb(223, 222, 224);
 	color: rgb(38, 38, 38);
 	border: solid black 2px;
@@ -814,15 +814,15 @@ Additional Styles
 }
 
 .submitBtn2 {
-	padding-left: 1rem;
-	padding-right: 1rem;
-	padding-top: .75rem;
-	padding-bottom: .75rem;
+	padding-left: 40%;
+	padding-right: 50%;
+	padding-bottom: 1rem;
 	font-size: 1rem;
 	width: 100%;
 	font-family: "Kanit", Tahoma, sans-serif;
 	font-weight: 500;
 	border: 3px solid;
+	border-radius: 0;
 }
 
 }
